Abstract particles class added. Proton and Neutron classes added

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,5 @@
 # These are supported funding model platforms
 
 github: 'sapogov1978'
-Boosty: 'https://boosty.to/sapogov/donate'
+
+custom: 'https://boosty.to/sapogov/donate'
